amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-requires.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/inexistent-requires.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#requires-external
  Message: 'error' should be declared as @external to be used in @requires
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-requires.graphql#/declares/shape/Person/property/property/age
  Property: http://a.ml/vocabularies/federation#requires
  Range: [(3,4)-(3,42)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#unmatched-field-in-field-set
  Message: Cannot find property with name 'birthday' when resolving field set
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/inexistent-requires.graphql#/declares/shape/Person
  Property: 
  Range: [(3,32)-(3,40)]
  Location: 
